--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                        +91 7993918195
                 <li class="list-item">
                     <i class="fas fa-envelope-open-text mx-10"></i>
-                    rajasulakshanakarla@gmail.com
+                    sulakshanak159@gmail.com
                 </li>
                 <li class="list-item">
                     <i class="fas fa-blog  mx-20"></i>
